--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,21 @@
       <version>1.8.5</version>
     </dependency>
 
-
+    <!--可简化文件先关操作-->
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.3</version>
     </dependency>
+
+    <!--增加JSR250支持-->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>jsr250-api</artifactId>
+      <version>1.0</version>
+    </dependency>
+
+
 
   </dependencies>
 
